--- a/navigation/astronet.html
+++ b/navigation/astronet.html
@@ -15,7 +15,7 @@ show_reading_time: false
     </p>
     <br />
 
-    <button onlick="newPostPopup()">New Post!</button>
+    <button onclick="newPostPopup()">New Post!</button>
   </div>
 </div>
 
@@ -62,6 +62,8 @@ show_reading_time: false
         channel_id,
       }),
     });
+
+    window.location.reload();
   }
 
   function newPostPopup() {
@@ -124,9 +126,6 @@ show_reading_time: false
       document.body.removeChild(popup);
     });
   }
-
-  // Add event listener to the "New Post" button
-  document.querySelector("button").addEventListener("click", newPostPopup);
 
   async function main() {
     let _groups = await fetch(`${pythonURI}/api/groups`, {
