--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ show_reading_time: false
 
 <h1>Welcome to Neptune!</h1>
 
+<div style="display: flex; justify-content: center; align-items: center; height: 40vh;">
+  <img src="navigation/images/neptune.png" alt="Neptune">
+</div>
+
+
 <div class="sidebar">
   <h3>Your Ring</h3>
   <button class="friend-btn" data-debate="Friend 1" data-channel-id="17">
@@ -84,6 +89,11 @@ show_reading_time: false
   </section>
 </div>
 
+
+<div class = "logo">
+  <img src="navigation/images/dnhs_logo.png" alt="DNHS">
+</div>
+
 <style>
   .sidebar {
     width: 200px;
@@ -125,6 +135,15 @@ show_reading_time: false
     position: fixed;
     top: 650px;
     left: 20px;
+  }
+
+  .logo {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
   }
 
   .friend-btn {
@@ -223,6 +242,7 @@ show_reading_time: false
     font-size: 3rem;
     margin-bottom: 2rem;
     color: #00e5ff;
+    text-align: center;
   }
 
   h2 {
